--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
-<h1 id="men">Our Menu</h1>
+<!DOCTYPE html>
 
-<div class="parent">
-<div id="firstDiv">
-  <span id="firstSpan" style="float:right">Chicken</span>
- <br><p id="pad"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut</p>
-  
-</div>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <link href="C:\Users\mahafonova\Desktop\proga\Coursera\StyleSheet1.css" rel="stylesheet" type="text/css" >
+    <title>Site</title>
+</head>
+<body>
+    <h1 id="men">Our Menu</h1>
 
-<div id="secondDiv">
-  <span id="secondSpan" style="float:right">Beef</span>
- <br><p id="pad"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut</p>
-  
-</div>
+    <div class="parent">
+        <div id="firstDiv">
+            <span id="firstSpan" style="float:right">Chicken</span>
+            <br><p id="pad"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut</p>
 
-<div id="thirdDiv">
-  <span id="thirdSpan" style="float:right">Sushi</span>
- <br><p id="pad"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut</p>
-  
-</div>
-</div>
+        </div>
+
+        <div id="secondDiv">
+            <span id="secondSpan" style="float:right">Beef</span>
+            <br><p id="pad"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut</p>
+
+        </div>
+
+        <div id="thirdDiv">
+            <span id="thirdSpan" style="float:right">Sushi</span>
+            <br><p id="pad"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut</p>
+
+        </div>
+    </div>
+
+</body>
+</html>
