--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link href="C:\Users\mahafonova\Desktop\proga\Coursera\StyleSheet1.css" rel="stylesheet" type="text/css" >
+    <link rel="stylesheet" type="text/css" href="StyleSheet1.css" />
     <title>Site</title>
 </head>
 <body>
